manifests/authentik/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true

spec:
  parentRefs:
    - name: public
      namespace: traefik
      sectionName: http

  hostnames:
    - auth.fede.fpms.ac.be

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: authentik-server
          port: 80
